--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,9 @@
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>9.4.0.v20161208</version>
                 <configuration>
+                    <jettyXml>
+                      ${project.basedir}/src/main/resources/jetty.xml,${project.basedir}/src/main/resources/jetty-ssl.xml,${project.basedir}/src/main/resources/jetty-https.xml
+                    </jettyXml>
                     <webApp>
                         <contextPath>/</contextPath>
                     </webApp>
